--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div>
-  <button type="button" (click)="printService.printDocument('assets/f.pdf', {})">PRINT IE</button>
+  <button type="button" (click)="handleClick()">PRINT IE</button>
 </div>
