add image wrapper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <button type="button" (click)="handleClick()" [disabled]="printService.inProcess$ | async">PRINT</button>
+  <button type="button" (click)="handleClick('assets/p.pdf')" [disabled]="printService.inProcess$ | async">PRINT</button>
   <button type="button" (click)="handleIEClick('assets/p.pdf')" [disabled]="printService.inProcess$ | async">PRINT IE</button>
   <button type="button" (click)="handleIEClick('assets/p1.pdf')" [disabled]="printService.inProcess$ | async">PRINT IE FIRST</button>
 </div>
