--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
-  <button type="button" (click)="handleClick('assets/combined_rotated.pdf')">
+  <button type="button" (click)="handleClick('assets/manual.pdf')">
     PRINT
   </button>
-  <button type="button" (click)="handleIEClick('assets/combined_rotated.pdf')">
+  <button type="button" (click)="handleIEClick('assets/manual.pdf')">
     PRINT IE
   </button>
   <button type="button" (click)="handleIEClick('assets/p1.pdf')">
