support new pdfjs version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <div class="wrapper">
-  <button type="button" (click)="handleClick('assets/manual.pdf')">
+  <button type="button" (click)="handleClick('assets/redis-ru.pdf')">
     PRINT
   </button>
-  <button type="button" (click)="handleIEClick('assets/manual.pdf')">
+  <button type="button" (click)="handleIEClick('assets/redis-ru.pdf')">
     PRINT IE
   </button>
-  <button type="button" (click)="handleIEClick('assets/p1.pdf')">
-    PRINT IE FIRST
-  </button>
-  <button type="button" (click)="getPagesCount('assets/manual.pdf')">
+  <button type="button" (click)="getPagesCount('assets/redis-ru.pdf')">
     PAGES COUNT
   </button>
 </div>
