add print canvas feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="wrapper">
+  <button type="button" (click)="handleCanvasClick(template)">
+    PRINT CANVAS
+  </button>
   <button type="button" (click)="handleClick('assets/redis-ru.pdf')">
     PRINT
   </button>
@@ -12,3 +15,204 @@
 <progress *ngIf="printService.progress$ | async as progress" [value]="progress.index" [max]="progress.totalCount">{{
   (progress.index / progress.totalCount).toFixed(2)
 }}</progress>
+
+<div #template>
+  <p style="text-align:center;">
+    <span style="font-size:20px;"><strong>СОГЛАСИЕ НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ</strong></span>
+  </p>
+  <p style="text-align:center;">&nbsp;</p>
+  <p class="ck-max-width-template-block-wrapper">
+    Я,
+    <template
+      class="stencil-template"
+      data-properties="full_name"
+      data-value=""
+      data-placeholder=""
+    ></template
+    >&nbsp;,
+  </p>
+  <p style="text-align:center;"><span style="font-size:12px;">(фамилия, имя, отчество)</span>,</p>
+  <p class="ck-max-width-template-block-wrapper">
+    зарегистрированный (-ая)/проживающий (-ая) по адресу &nbsp;
+    <template
+      class="stencil-template"
+      data-properties="address"
+      data-value=""
+      data-placeholder=""
+    ></template
+    >&nbsp; ,
+  </p>
+  <p style="text-align:center;">
+    <span style="font-size:12px;"
+      >&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+      &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; (адрес
+      регистрации или фактического проживания субъекта персональных данных)</span
+    >
+  </p>
+  <p>&nbsp;</p>
+  <p class="ck-max-width-template-block-wrapper">
+    <template
+      class="stencil-template"
+      data-properties="identification_type"
+      data-value="Паспорт"
+      data-placeholder=""
+      data-options="Паспорт,Водительское удостоверение"
+    ></template
+    ><template
+      class="stencil-template template_resized"
+      style="width:895px;"
+      data-properties="identification_type"
+      data-value="Паспорт"
+      data-placeholder=""
+      data-options="Паспорт,Водительское удостоверение"
+    ></template
+    >&nbsp;,
+  </p>
+  <p style="text-align:center;">
+    <span style="font-size:12px;">(наименование основного документа, удостоверяющего личность, серия и номер)</span>
+  </p>
+  <p class="ck-max-width-template-block-wrapper">
+    <template
+      class="stencil-template"
+      data-properties="identification_issue_date"
+      data-value=""
+      data-placeholder=""
+    ></template
+    >&nbsp;,
+  </p>
+  <p style="text-align:center;">
+    <span style="font-size:12px;"
+      >(сведения о дате выдачи указанного документа и выдавшем его органе, код подразделения)</span
+    >
+  </p>
+  <p>
+    свободно, своей волей и в своем интересе <strong>выражаю</strong> АО ВТБ Лизинг (109147, г. Москва, ул.
+    Воронцовская, д. 43, стр. 1) <strong>согласие на обработку</strong>, предполагающую сбор (непосредственно от
+    заявителя, от третьих лиц, путем направления запросов в Банк ВТБ (ПАО) (190000, г. Санкт-Петербург, ул. Большая
+    Морская, д.29), в органы государственной власти, органы местного самоуправления, юридическим и физическим лицам, из
+    иных общедоступных информационных ресурсов, из архивов), запись, систематизацию, накопление, хранение, уточнение
+    (обновление, изменение), проверку, извлечение, использование, передачу (распространение, предоставление, доступ),
+    полностью или частично третьим лицам, действующим на основании договоров, заключенных ими с АО ВТБ Лизинг,
+    обезличивание, блокирование, удаление и уничтожение, <strong>следующих моих персональных данных</strong>:
+  </p>
+  <p>&nbsp;</p>
+  <p>
+    фамилия, имя, отчество, дата и место рождения, пол, гражданство, серия и номер основного документа (включая его
+    копию), удостоверяющего личность, сведения о дате выдачи указанного документа и выдавшем его органе, ИНН, страховой
+    номер индивидуального лицевого счета, адрес регистрации и фактического проживания, контактная информация (домашний,
+    рабочий, мобильный телефоны, электронные адреса), место работы и должность, сведения о доходах, сведения о причинах
+    изменения персональных данных, сведения об имущественном положении.
+  </p>
+  <p>&nbsp;</p>
+  <p><strong>Настоящее согласие дано для следующих отмеченных целей обработки:</strong></p>
+  <p>&nbsp;</p>
+  <figure class="editor-content-table">
+    <table>
+      <tbody>
+        <tr>
+          <td>
+            <template
+              class="stencil-template"
+              data-properties="attorney_agreed"
+              data-value="true"
+              data-placeholder=""
+            ></template>
+          </td>
+          <td>
+            определения возможности заключения договора финансовой аренды (лизинга)/ договора перенайма/ договора
+            купли-продажи / договора поручительства АО ВТБ Лизинг со мной или с любым юридическим лицом, единоличным
+            исполнительным органом или представителем которого я являюсь, заключения, изменения и исполнения таких
+            договоров, в том числе в случае неисполнения и/или ненадлежащего их исполнения, подписания актов
+            приема-передачи имущества по указанным договорам и иных, связанных с передачей данного имущества,
+            документов, осуществления информационных рассылок и осуществления прямых контактов с помощью любых средств
+            связи (телефонной и подвижной связи, смс-оповещения, почтового письма, телеграммы, голосового сообщения,
+            сообщения по электронной почте и др.), при этом право выбора организаций для данных действий предоставляю АО
+            ВТБ Лизинг без дополнительного согласования со мной, по вопросам исполнения договоров, а также для
+            обеспечения соблюдения законов и иных нормативно-правовых актов,
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <template
+              class="stencil-template"
+              data-properties="advertisement_agreed"
+              data-value="undefined"
+              data-placeholder=""
+            ></template>
+          </td>
+          <td>
+            осуществления рассылок маркетингового характера и осуществления прямых контактов с целью проведения опросов
+            с помощью любых средств связи (телефонной и подвижной связи, смс-оповещения, почтового письма, телеграммы,
+            голосового сообщения, сообщения по электронной почте и др.), при этом право выбора организаций для данных
+            действий предоставляю АО ВТБ Лизинг без дополнительного согласования со мной.
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </figure>
+  <p>&nbsp;</p>
+  <p>
+    &nbsp; &nbsp; Обработка персональных данных осуществляется как с использованием средств автоматизации, в том числе в
+    информационно-телекоммуникационных сетях, так и без использования таких средств.
+  </p>
+  <p>
+    &nbsp; &nbsp; АО ВТБ Лизинг, в соответствии с настоящим согласием и для достижения указанных выше целей, вправе
+    поручить обработку персональных данных третьим лицам, а так же, в случае привлечения третьих лиц к оказанию услуг
+    и/или в случае передачи АО ВТБ Лизинг принадлежащих ему прав требования третьему лицу, вправе, в необходимом объеме,
+    раскрывать/передавать информацию таким третьим лицам, их агентам и иным уполномоченным им лицам, а также
+    предоставлять таким лицам соответствующие документы, содержащие такую информацию.
+  </p>
+  <p>
+    &nbsp; &nbsp; АО ВТБ Лизинг в соответствии с настоящим согласием может передавать персональные данные в Банк ВТБ
+    (ПАО) (190000, г. Санкт-Петербург, ул. Большая Морская, д.29) для целей оказания дополнительных услуг.
+  </p>
+  <p>
+    &nbsp; &nbsp; Согласие на обработку персональных данных вступает в силу со дня его подписания, действует в течение
+    15 (пятнадцати) лет или до момента надлежащего отзыва согласия.
+  </p>
+  <p>
+    &nbsp; &nbsp; Согласие может быть отозвано в любое время посредством направления соответствующего письменного
+    заявления в адрес АО ВТБ Лизинг. В случае отзыва настоящего согласия АО ВТБ Лизинг вправе продолжить обработку
+    персональных данных в случаях и в порядке, предусмотренных законодательством Российской Федерации.
+  </p>
+  <p>
+    &nbsp; &nbsp; В случае любых изменений персональных данных, указанных в настоящем согласии, обязуюсь сообщить о
+    таких изменениях АО ВТБ Лизинг в течение 7 (семи) дней.
+  </p>
+  <p>&nbsp;</p>
+  <figure class="editor-content-table">
+    <table>
+      <tbody>
+        <tr>
+          <td>
+            <template
+              class="stencil-template"
+              data-properties="full_name"
+              data-value="undefined"
+              data-placeholder=""
+            ></template>
+          </td>
+          <td>
+            <p class="ck-max-width-template-block-wrapper">
+              <template
+                class="stencil-template"
+                data-properties="address"
+                data-value="undefined"
+                data-placeholder=""
+              ></template>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td><p style="text-align:center;">(подпись)</p></td>
+          <td>(фамилия, имя, отчество лица, давшего согласие)</td>
+        </tr>
+      </tbody>
+    </table>
+  </figure>
+  <p>&nbsp;&nbsp;</p>
+  <p>«___» __________20__ г.</p>
+</div>
